tests, and Sift works again (fixed GraphSearcher)